src/sass/_components.scss
// hiden class
.visually-hidden {
  position: absolute;
  white-space: nowrap;
  width: 1px;
  height: 1px;
  overflow: hidden;
  border: 0;
  padding: 0;
  clip: rect(0, 0, 0, 0);
  clip-path: inset(50%);
  margin: -1px;
}

.container {
  display: flex;
  flex-direction: column;
  height: auto;
  width: 100vw;
  background-color: $color-secondary-light;
  overflow: hidden;
}
.sidebar {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100vh;
  font-family: $font-primary;
  background-color: #7286d3;
}

// search block
.search-block {
  position: relative;
  font-size: 2rem;
  &__label {
    width: 100%;
    display: flex;
    position: relative;
  }

  &__input {
    font-size: 1.8rem;
    height: 2rem;
    font-family: $font-primary;
    color: #212121;
    width: 100%;
    padding: 0.9rem 2rem 0.9rem 4.5rem;
    border-color: transparent;
    border-radius: 0;
    outline: none;
    appearance: none;
    &:focus {
      font-size: 1.8rem;
      outline: none;
    }
    &::placeholder {
      font-family: $font-primary;
    }
  }

  &__icon {
    position: absolute;
    left: 10px;
    top: 50%;
    transform: translateY(-50%);
    color: $color-grey-dark;
  }

  &__list {
    display: flex;
    flex-direction: column;
    position: absolute;
    width: 100%;
    left: 0;
    top: 4rem;
    background-color: $color-white;
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
  }
  &__btn {
    font-size: 1.6rem;
  }

  &__link {
    display: block;
    width: 100%;
    font-size: 1.5rem;
    padding: 1rem;
    border-color: transparent;
    background-color: transparent;
    transition: background-color $transition-speed $cubic;

    &:not(:last-child) {
      border-bottom: 1px solid $color-grey-dark-2;
      &:last-child {
        margin-bottom: 1rem;
      }
    }

    &:hover {
      background-color: $color-primary;
    }
  }
}

// CURRENT CONDITION PRIMARY BLOCK
.current-condition {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  flex-grow: 2;
  &__img {
    width: 4rem;
    height: 4rem;
    margin-right: 3.5rem;
    stroke: $color-secondary-light;
    fill: transparent;
  }
  &__primary {
    display: flex;
    flex-direction: column;
  }
  &__temp {
    display: flex;
    justify-content: center;
    margin-top: 2rem;
  }

  &__num {
    display: flex;
    font-size: 8rem;
    font-weight: 600;
    line-height: 1;
  }

  &__celsius-main {
    width: 4rem;
    height: 4rem;
  }
  &__celsius {
    width: 1rem;
    height: 1rem;
    fill: currentColor;
  }

  &__fill {
    display: flex;
    font-size: 1.5rem;
    align-self: end;
    padding-bottom: 1rem;
    color: #666;
  }

  &__wrap-img {
    display: flex;
    justify-content: center;
    align-items: center;
    // margin-top: -2rem;
    background: radial-gradient(
      circle,
      rgba(168, 200, 249, 0.826) 0%,
      rgba(9, 9, 121, 0) 65%
    );
    & img {
      max-width: 80%;
    }
  }

  // CURRENT CONDITION SECONDARY BLOCK
  &__overcoast {
    color: $color-primary;
    padding-left: 2rem;
  }
  &__item {
    display: flex;
    align-items: center;
    font-size: 2rem;
    &:not(:last-child) {
      margin-bottom: 1.5rem;
    }
  }
}

.location {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  flex-direction: column;
  order: -1;

  &__item:first-child {
    display: flex;
    align-items: center;
  }

  &__title {
    font-size: 3.2rem;
    line-height: 1;
  }
  &__item:last-child {
    font-size: 1.5rem;
    color: #666;
  }
  &__icon {
    color: #666;
    margin-right: 1rem;
  }
}

// HOURS WEATHER BLOCK
.weather {
  display: flex;
  flex-direction: column;
  padding: 2rem 0;
  min-height: 170px;
}
.navigation {
  display: flex;
  justify-content: space-between;
  margin-bottom: 2rem;
  padding: 0 1rem;
}
.nav-list {
  font-size: 2rem;
  font-weight: 600;
  display: flex;
  align-items: flex-end;
  &__item {
    &:not(:last-child) {
      margin-right: 2.5rem;
    }
  }
  &__link {
    color: #c8c8c8;
    border-bottom: 2px solid #c8c8c8;
    transition: color $transition-speed $cubic,
      border-color $transition-speed $cubic;
    &.current {
      color: $color-black;
      border-bottom: 2px solid $color-black;
    }
    &:hover {
      color: $color-black;
      border-color: $color-black;
    }
  }
}
.temp-changer {
  display: flex;
  &__item {
    &:not(:last-child) {
      margin-right: 1rem;
    }
  }
}
.weather-lights {
  &__items {
    font-family: $font-primary;
    background-color: #fff;
  }
  &__time {
    font-size: 1.4rem;
    text-align: center;
    font-weight: 600;
  }
  &__temp {
    font-size: 1.4rem;
    text-align: center;
    &-now {
      font-weight: 600;
      margin-right: 0.5rem;
    }
    &-fills {
      color: #a4a4a4;
    }
  }
  &-wraper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 1rem;
  }
}
// HIGHLIGHTS WEATHER BLOCK

.highlights {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  // justify-content: end;
  padding: 2rem 1rem;
  min-height: 38rem;

  &__title {
    font-size: 2rem;
    font-weight: 600;
    margin-bottom: 2rem;
  }
}
//DETAIL LIST

.detail-list {
  display: flex;
  flex-wrap: wrap;
  margin: -0.4rem;
  &__item {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: calc((100% - 11.4rem) / 3);
    height: 12rem;
    background-color: #fff;
    margin: 0.4rem;
    border-radius: 2rem;
    padding: 1.5rem;
  }
  &__img {
    &--large {
      width: auto;
      height: 100px;
      margin: 0 auto;
    }
  }
  &__title {
    font-size: 1.5rem;
    color: #a4a4a4;
  }
  &__text {
    font-size: 2.7rem;
    font-weight: 600;
  }
  &__wind-direction {
    display: flex;
    align-items: center;

    & img {
      width: 3rem;
      height: 3rem;
      margin: 0 1rem 0 0;
    }
    &--text {
      font-size: 1.2rem;
      color: #a4a4a4;
    }
  }
  &__wraper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    & img {
      width: 5rem;
      height: auto;
    }
  }
  &__status {
    font-size: 1.2rem;
    letter-spacing: 0.1rem;
  }
  &__container {
    &--middle {
      margin: auto 0;
    }
  }
}
.sunrise-sunset {
  display: flex;
  align-items: center;
  &__img {
    width: 4rem;
    height: 4rem;
    margin: 0 1rem 0 0;
  }
  &__time {
    font-size: 1.7rem;
    font-weight: 600;
  }
}
.air-quality {
  &__img {
    align-self: center;
  }
  &__text {
    font-size: 1.5rem;
    font-weight: 600;
  }
}
// TOGGLE CONTROL STYLE

// .toggle-control {
//   display: block;
//   position: relative;
//   padding-left: $toggle-width;
//   cursor: pointer;
//   font-size: 1rem;
//   user-select: none;

//   input {
//     position: absolute;
//     opacity: 0;
//     cursor: pointer;
//     height: 0;
//     width: 0;
//   }

//   input:checked ~ .control {
//     background-color: $toggle-background-color-on;

//     &::before {
//       background: $toggle-background-color-on;
//       left: $toggle-width - ($toggle-control-size * 1.4) - $toggle-gutter;
//       transform: scale(1);
//     }

//     &::after {
//       background: $color-white;
//       left: $toggle-width - $toggle-control-size - $toggle-gutter;
//     }
//   }

//   .control {
//     position: absolute;
//     top: 0;
//     left: 0;
//     height: $toggle-height;
//     width: $toggle-width;
//     border-radius: $toggle-radius;
//     background-color: $toggle-background-color-off;
//     transition: background-color $transition-speed $cubic;

//     &::before {
//       content: '';
//       position: absolute;
//       width: calc($toggle-control-size / 1);
//       height: calc($toggle-control-size / 1);
//       left: 0px;
//       top: 0px;
//       border-radius: 50%;

//       transform: scale(0);

//       background: $toggle-background-color-off;
//       z-index: 5;

//       transition: all $transition-speed $cubic;
//     }

//     &::after {
//       content: '';
//       position: absolute;
//       left: $toggle-gutter;
//       top: $toggle-gutter;
//       width: $toggle-control-size;
//       height: $toggle-control-size;
//       border-radius: $toggle-radius;
//       background: $color-tertiary-light;
//       transition: all $transition-speed $cubic;
//     }
//   }
// }

// BUTTON STYLE
.btn {
  font-family: inherit;
  font-weight: 600;
  font-size: 1.6rem;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 4rem;
  height: 4rem;
  border-radius: 50%;
  background-color: $color-white;
  border: none;
  color: $color-black;
  transition: color $transition-speed $cubic,
    background-color $transition-speed $cubic;
  &-icon {
    width: 2rem;
    height: 2rem;
    fill: currentColor;
  }
  &:hover {
    background-color: $color-black;
    color: #fff;
  }
}
// icons style
.icon {
  fill: currentColor;
  width: 2rem;
  height: 2.2rem;
}

// SWIPER STYLE
.swiper {
  width: 100%;
  height: 100%;
}
.swiper.weather-lights {
  padding-bottom: 8px;
}
.swiper-button {
  &-next,
  &-prev {
    position: absolute;

    top: 50%;
    z-index: 9;
    transform: translateY(-50%);
    fill: #535353;
    opacity: 0.3;
    cursor: pointer;
    transition: opacity $transition-speed $cubic;

    &:hover {
      opacity: 1;
    }
  }
  &-next {
    right: 2px;
  }
  &-prev {
    left: 2px;
  }
  &-icon {
    width: 2rem;
    height: 2rem;
  }
  &-disabled {
    display: none;
    opacity: 0;
  }
}
// COPYRIGHT STYLE
.copyright {
  align-self: center;
  margin-top: 15px;
  color: #8d8d8d;
}
/* LOADER  */
.loader {
  width: 10px;
  height: 10px;
  border-radius: 50%;
  display: flex;
  position: absolute;
  top: 50%;
  left: calc(50% - 100px);
  transform: translate(-50%, -50%);
  opacity: 1;
  transition: all $transition-speed ease;
  animation: shadowRolling 2s linear infinite;
}

@keyframes shadowRolling {
  0% {
    box-shadow: 0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0),
      0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0);
  }
  12% {
    box-shadow: 100px 0 rgb(162, 162, 162), 0px 0 rgba(255, 255, 255, 0),
      0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0);
  }
  25% {
    box-shadow: 110px 0 rgb(162, 162, 162), 100px 0 rgb(162, 162, 162),
      0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0);
  }
  36% {
    box-shadow: 120px 0 rgb(162, 162, 162), 110px 0 rgb(162, 162, 162),
      100px 0 rgb(162, 162, 162), 0px 0 rgba(255, 255, 255, 0);
  }
  50% {
    box-shadow: 130px 0 rgb(162, 162, 162), 120px 0 rgb(162, 162, 162),
      110px 0 rgb(162, 162, 162), 100px 0 rgb(162, 162, 162);
  }
  62% {
    box-shadow: 200px 0 rgba(255, 255, 255, 0), 130px 0 rgb(162, 162, 162),
      120px 0 rgb(162, 162, 162), 110px 0 rgb(162, 162, 162);
  }
  75% {
    box-shadow: 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0),
      130px 0 rgb(162, 162, 162), 120px 0 rgb(162, 162, 162);
  }
  87% {
    box-shadow: 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0),
      200px 0 rgba(255, 255, 255, 0), 130px 0 rgb(162, 162, 162);
  }
  100% {
    box-shadow: 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0),
      200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0);
  }
}
// UTILITIES
.hide {
  display: none;
  opacity: 0;
  transition: opacity $transition-speed $cubic;
}
.current {
  &__btn {
    background-color: $color-black;
    color: $color-white;
  }
}

